Updated gather_facts: false at line 22 lp_learning_neo4j_provision.yml

--- a/ansible/lp_learning_neo4j_provision.yml
+++ b/ansible/lp_learning_neo4j_provision.yml
@@ -20,6 +20,7 @@
     when: neo4j_upstream_download
 
 - hosts: learning-neo4j-cluster
+  gather_facts: false
   vars_files:
     - "{{inventory_dir}}/secrets.yml"
   pre_tasks:
