added  become: yes   become_user: deployer at line 23  lp_learning_neo4j_provision.yml

--- a/ansible/lp_learning_neo4j_provision.yml
+++ b/ansible/lp_learning_neo4j_provision.yml
@@ -20,7 +20,8 @@
     when: neo4j_upstream_download
 
 - hosts: learning-neo4j-cluster
-  gather_facts: false
+  become: yes
+  become_user: deployer
   vars_files:
     - "{{inventory_dir}}/secrets.yml"
   pre_tasks:
