--- a/ansible/lp_learning_neo4j_provision.yml
+++ b/ansible/lp_learning_neo4j_provision.yml
@@ -21,7 +21,7 @@
 
 - hosts: learning-neo4j-cluster
   become: yes
-  become_user: learning
+  become_user: deployer
   vars_files:
     - "{{inventory_dir}}/secrets.yml"
   pre_tasks:
